# Olivia-Arcium

./: .gitignore  Anchor.toml  Cargo.toml  DECENTRALIZED_NETWORK_STATUS.md  INITIALIZATION_STATUS.md  README.md  anchor-package-lock.json  anchor-package.json  package-lock.json  package.json  rust-toolchain
.github/workflows/: ci.yml
Arcium/: README.md
Arcium/scripts/: init-comp-defs-devnet.js  init-mxe-devnet.js
DatabaseProcessor/src/: main.rs
Docs/: Devnet.md  Testnet.md
Frontend/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
Migrations/: deploy.ts
Programs/PredictionMarket/: Cargo.toml
Scripts/: init-arcium-localnet.js
Tests/: PredictionMarket.ts
WebSocketServer/: Cargo.toml
WebSocketServer/src/: main.rs
artifacts/: arx_ata_7Zrv_3fNr.json  arx_ata_A9oJ_aj1i.json  arx_ata_HeaV_3Mg8.json  arx_mint.json  arx_node_7Zrv_3fNr.json  arx_node_A9oJ_aj1i.json  cluster_acc_0.json  distribute_rewards_raw_circuit_0.json  docker-compose-arx-env.yml  executing_pool_acc.json  initialize_market_raw_circuit_0.json  mempool_acc.json  mxe_acc.json  mxe_keygen_comp.json  mxe_keygen_comp_def.json  operator_acc_7Zrv_3fNr.json  operator_acc_A9oJ_aj1i.json  place_bet_raw_circuit_0.json  resolve_market_raw_circuit_0.json  submit_quorum_vote_raw_circuit_0.json  wallet_acc_7Zrv_3fNr.json  wallet_acc_A9oJ_aj1i.json  wallet_acc_HeaV_3Mg8.json  wallet_acc_callback_BrG8_jV75.json  wallet_acc_callback_duEo_sakN.json
artifacts/localnet/: identity_0.pem  identity_1.pem  node_0.json  node_1.json  (+2 more)
client/: package.json
prediction_market/: Anchor.toml
(+93 files in other folders)
