[workspace]
members = ["Programs/*", "Arcium/circuits/EncryptedIxs", "WebSocketServer", "DatabaseProcessor"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Ayush Srivastava"]

[workspace.dependencies]
anchor-lang = "0.31.1"
axum = "0.8.1"
dotenv = "0.15"
redis = "0.26.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.43"
tower-http = "0.6.2"
tracing = "0.1"
tracing-subscriber = "0.3"

[patch.crates-io]
proc-macro2 = { git = 'https://github.com/arcium-hq/proc-macro2.git' }

[workspace.lints.rust]
# Suppress warnings about unexpected cfg conditions from Solana/Anchor macros
unexpected_cfgs = "allow"
# Suppress deprecation warnings from anchor_lang macros (using deprecated realloc internally)
deprecated = "allow"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
